20071009: Documentation now clearly identifies its Qtstalker version. Thanks to xley.

20071010: Improved installation doc to show where stuff is installed and where user preferences are kept. Thanks to xley.

20071010: Improved the docs with deliberately basic CSS. Thanks to xley.